--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$nobetween-app-primary: mat-palette($mat-indigo);
+$nobetween-app-primary: mat-palette($mat-green, A400);
 $nobetween-app-accent: mat-palette($mat-pink, A200, A100, A400);
 $nobetween-app-theme: mat-light-theme($nobetween-app-primary, $nobetween-app-accent);
 
