new menu system, added all comps

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,18 +1,8 @@
-/* .nobetween-btn {
-    width: 200px;
-    font-size: 12px;
+.login-btn {
+    background-color: #272f3c;
+    color: #c1c1c1;
 }
 
-.nobetween-btn-small {
-    width: 200px;
-    font-size: 10px;
-    color: #7f7f7f;
-}
-
-.nobetween-btn:hover {
-    color: #7f7f7f;
-}
-
-.nobetween-btn-small:hover {
+.login-btn:hover {
     color: #FFFFFF;
-} */
+}
