--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,29 +1,82 @@
 .dashboard-container {
     height: 100%;
     width: 100%;
-    background-color: #262626;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.header-container {
-    height: 45px;
+.dashboard-text {
+    color: #FFFFFF;
+}
+
+.sidenav-container {
+    height: 100%;
     width: 100%;
-    background-color: RGBA(26, 35, 126, .3);
+    background-color: #262626;
+    height: 90%;
 }
 
 .golf-icon {
     margin: 8px;
     cursor: pointer;
+    color: #FFFFFF;
 }
 
-.sidenav-container {
-    background-color: RGBA(26, 35, 126, .3);
+.sidenav-panel {
+    border-right: 1px solid #31538f;
+    background-color: #272f3c;
+    position: fixed !important;
+
 }
 
 .divider-ctrl {
     border-top-width: 2px !important;
-    background: #5c6bc0;
+    background: #c1c1c1;
 }
 
 mat-list-item {
+    display: flex !important;
+    color: #c1c1c1 !important;
+}
+
+mat-list-item:hover {
+    color: #FFFFFF !important;
+}
+
+.expansion-panel {
+    box-shadow: none !important;
+    background: #272f3c;
+    border-radius: 0px !important;
+}
+
+.expansion-header {
+    padding: 0 16px !important;
+    height: 40px;
+}
+
+.mat-expansion-panel-header.mat-expanded {
+    height: 40px !important;
+}
+
+.expansion-title {
+    font-size: 12px !important;
+    color: #c1c1c1 !important;
+}
+
+.expansion-title:hover {
+    color: #FFFFFF !important;
+}
+
+
+.mat-expansion-panel-body {
+    padding: 0 24px !important;
+}
+
+.mat-expansion-indicator::after {
+    color: #c1c1c1 !important;
+}
+
+.mat-expansion-indicator::after:hover {
     color: #FFFFFF !important;
 }
