--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,3 +1,3 @@
-<div class="form-container">
-    <span class="home-text"> Main Dashboard</span>
+<div class="dashboard-container">
+    <span class="dashboard-text"> Home </span>
 </div>
