--- a/src/app/dashboard/trends-analysis/trends-analysis.component.html
+++ b/src/app/dashboard/trends-analysis/trends-analysis.component.html
@@ -1,3 +1,3 @@
 <div class="dashboard-container">
-    <span class="dashboard-text"> Tends Analysis </span>
+    <span class="dashboard-text"> Trends Analysis </span>
 </div>
