styles and worked on change course comp

--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -4,10 +4,11 @@
             <mat-label>EMAIL</mat-label>
             <input matInput formControlName="Email" placeholder="EMAIL" type="email">
         </mat-form-field>
-        <button type="button" mat-flat-button color="primary" (click)="onResetPassword_Click()"> RESET PASSWORD
+        <button type="button" mat-flat-button (click)="onResetPassword_Click()"> RESET PASSWORD
         </button>
-        <span class="nobetween-info"> If an account with this email address exists, you will receive an email to reset
-            your password.
-        </span>
     </form>
+
+    <span class="nobetween-info"> If an account with this email address exists, you will receive an email to reset
+        your password.
+    </span>
 </div>
