--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .flex-container {
@@ -14,6 +16,9 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    border: 1px solid #c1c1c117;
+    padding: 16px;
+    margin: 4px;
 }
 
 .font-size-sm {
