--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@
 			<input matInput formControlName="Password" placeholder="PASSWORD" type="password">
 			<mat-icon matSuffix>lock</mat-icon>
 		</mat-form-field>
-		<button type="button" mat-flat-button (click)="onLogin_Click()" class="login-btn"> LOGIN </button>
+		<button type="button" mat-flat-button (click)="onLogin_Click()"> LOGIN </button>
 		<button type="button" mat-button class="font-size-sm" (click)="onRegister_Click()"> REGISTER NEW ACCOUNT
 		</button>
 		<button type="button" mat-button class="font-size-sm" (click)="onForgotPassword_Click()"> FORGOT PASSWORD
