--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="form-container">
+	<span class="nobetween-info"> Coordinate with your course administrator for the correct Course/Club Code
+	</span>
 	<form [formGroup]="formGroup" class="flex-container" autocomplete="off">
-		<span class="nobetween-info"> Coordinate with your course administrator for the correct Course/Club Code
-		</span>
 		<mat-form-field appearance="standard">
 			<mat-label>COURSE/CLUB CODE</mat-label>
 			<input matInput formControlName="ClubCode" placeholder="COURSE/CLUB CODE">
@@ -37,7 +37,7 @@
 					{{ level.label }}</mat-option>
 			</mat-select>
 		</mat-form-field>
-		<button type="button" mat-flat-button color="primary" (click)="onCreateAccount_Click()"> CREATE ACCOUNT
+		<button type="button" mat-flat-button (click)="onCreateAccount_Click()"> CREATE ACCOUNT
 		</button>
 	</form>
 </div>
