--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -10,6 +10,11 @@
     color: #FFFFFF;
 }
 
+dashboard-text-container {
+    margin-top: 10px;
+    margin-left: 6px;
+}
+
 .sidenav-container {
     height: 100%;
     width: 100%;
