--- a/src/app/dashboard/account-management/account-management.component.html
+++ b/src/app/dashboard/account-management/account-management.component.html
@@ -1,3 +1,101 @@
-<div class="dashboard-container">
-    <span class="dashboard-text"> Account Management </span>
+<div class="form-container">
+    <div class="dashboard-text-container">
+        <span class="dashboard-text"> ACCOUNT MANAGEMENT
+        </span>
+    </div>
+    <div class="dashboard-text-container" *ngIf="!showGrid">
+        <span class="dashboard-text"> {{ accountStatusTxt }}
+        </span>
+    </div>
+    <form [formGroup]="formGroup" autocomplete="off">
+        <div class="flex-container">
+            <mat-form-field appearance="standard" *ngIf="showGrid">
+                <mat-label>FILTER: {{ activeFilter }} </mat-label>
+                <mat-select formControlName="Filter">
+                    <mat-option *ngFor="let filter of vmFilters" [value]="filter.value">
+                        {{ filter.label }}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="!showGrid">
+                <mat-label>FIRST NAME</mat-label>
+                <input matInput formControlName="FirstName" placeholder="FIRST NAME">
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="!showGrid">
+                <mat-label>LAST NAME</mat-label>
+                <input matInput formControlName="LastName" placeholder="LAST NAME">
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="!showGrid">
+                <mat-label>PHONE NUMBER</mat-label>
+                <input matInput formControlName="PhoneNumber" placeholder="PHONE NUMBER" type="tel">
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="!showGrid">
+                <mat-label>EMAIL</mat-label>
+                <input matInput formControlName="Email" placeholder="EMAIL" type="email">
+            </mat-form-field>
+            <mat-form-field appearance="standard" *ngIf="!showGrid">
+                <mat-label>ACCESS LEVEL</mat-label>
+                <mat-select formControlName="AccessLevel">
+                    <mat-option *ngFor="let level of vmAcess" [value]="level.value">
+                        {{ level.label }}</mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('save')"
+                *ngIf="!showGrid"> {{
+                accountStatusBtn }}
+            </button>
+
+            <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('disable')"
+                *ngIf="!showGrid && accountEnabled"> DISABLE ACCOUNT
+            </button>
+
+            <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('enable')"
+                *ngIf="!showGrid && !accountEnabled"> ENABLE ACCOUNT
+            </button>
+        </div>
+    </form>
+
+    <table mat-table [dataSource]="dataSource" *ngIf="showGrid">
+
+        <ng-container matColumnDef="statuslink">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element">
+                <span class="table-link" (click)="onStatus_Click(element)"> {{element.statuslink}} </span>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="firstname">
+            <th mat-header-cell *matHeaderCellDef> First Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="lastname">
+            <th mat-header-cell *matHeaderCellDef> Last Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+            <th mat-header-cell *matHeaderCellDef> Phone </th>
+            <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="access">
+            <th mat-header-cell *matHeaderCellDef> Access </th>
+            <td mat-cell *matCellDef="let element"> {{element.access}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
 </div>
