--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <mat-expansion-panel class="expansion-panel">
             <mat-expansion-panel-header class="expansion-header">
                 <mat-panel-title class="expansion-title">
-                    Name Placeholder
+                    {{currentUser.lastname}}, {{currentUser.firstname}}
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-nav-list dense>
