--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,15 +2,15 @@
 	<form [formGroup]="formGroup" class="flex-container" autocomplete="off">
 		<mat-form-field appearance="standard">
 			<mat-label>EMAIL</mat-label>
-			<input matInput formControlName="Email" placeholder="EMAIL" type="email">
+			<input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
 			<mat-icon matSuffix>email</mat-icon>
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>PASSWORD</mat-label>
-			<input matInput formControlName="Password" placeholder="PASSWORD" type="password">
+			<input matInput formControlName="Password" placeholder="PASSWORD" type="password" required>
 			<mat-icon matSuffix>lock</mat-icon>
 		</mat-form-field>
-		<button type="button" mat-flat-button (click)="onLogin_Click()"> LOGIN </button>
+		<button type="button" mat-flat-button (click)="onLogin_Click()" [disabled]="formGroup.invalid"> LOGIN </button>
 		<button type="button" mat-button class="font-size-sm" (click)="onRegister_Click()"> REGISTER NEW ACCOUNT
 		</button>
 		<button type="button" mat-button class="font-size-sm" (click)="onForgotPassword_Click()"> FORGOT PASSWORD
