--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -8,11 +8,11 @@
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>FIRST NAME</mat-label>
-			<input matInput formControlName="FirstName" placeholder="FIRST NAME">
+			<input matInput formControlName="FirstName" placeholder="FIRST NAME" required>
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>LAST NAME</mat-label>
-			<input matInput formControlName="LastName" placeholder="LAST NAME">
+			<input matInput formControlName="LastName" placeholder="LAST NAME" required>
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>PHONE NUMBER</mat-label>
@@ -20,15 +20,15 @@
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>EMAIL</mat-label>
-			<input matInput formControlName="Email" placeholder="EMAIL" type="email">
+			<input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>PASSWORD</mat-label>
-			<input matInput formControlName="Password" placeholder="PASSWORD" type="password">
+			<input matInput formControlName="Password" placeholder="PASSWORD" type="password" required>
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>CONFIRM PASSWORD</mat-label>
-			<input matInput formControlName="PasswordConfirm" placeholder="CONFIRM PASSWORD" type="password">
+			<input matInput formControlName="PasswordConfirm" placeholder="CONFIRM PASSWORD" type="password" required>
 		</mat-form-field>
 		<mat-form-field appearance="standard">
 			<mat-label>ACCESS LEVEL</mat-label>
@@ -37,7 +37,8 @@
 					{{ level.label }}</mat-option>
 			</mat-select>
 		</mat-form-field>
-		<button type="button" mat-flat-button (click)="onCreateAccount_Click()"> CREATE ACCOUNT
+		<button type="button" mat-flat-button (click)="onCreateAccount_Click()" [disabled]="formGroup.invalid"> CREATE
+			ACCOUNT
 		</button>
 	</form>
 </div>
