--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -2,9 +2,10 @@
     <form [formGroup]="formGroup" class="flex-container" autocomplete="off">
         <mat-form-field appearance="standard">
             <mat-label>EMAIL</mat-label>
-            <input matInput formControlName="Email" placeholder="EMAIL" type="email">
+            <input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
         </mat-form-field>
-        <button type="button" mat-flat-button (click)="onResetPassword_Click()"> RESET PASSWORD
+        <button type="button" mat-flat-button (click)="onResetPassword_Click()" [disabled]="formGroup.invalid"> RESET
+            PASSWORD
         </button>
     </form>
 
