--- a/src/app/dashboard/couse-club-layout/courses/courses.component.html
+++ b/src/app/dashboard/couse-club-layout/courses/courses.component.html
@@ -1,3 +1,59 @@
-<div class="dashboard-container">
-    <span class="dashboard-text"> Courses </span>
+<div class="form-container">
+    <div class="dashboard-text-container">
+        <span class="dashboard-text"> COURSE / CLUBS
+        </span>
+    </div>
+
+    <form [formGroup]="formGroup" autocomplete="off" *ngIf="!showGrid">
+        <div class="flex-container">
+            <mat-form-field appearance="standard">
+                <mat-label>COURSE NAME</mat-label>
+                <input matInput formControlName="CourseName" placeholder="COURSE NAME" required>
+            </mat-form-field>
+            <mat-form-field appearance="standard">
+                <mat-label># OF HOLES</mat-label>
+                <input matInput formControlName="NumOfHoles" placeholder="# OF HOLES" required type="number">
+            </mat-form-field>
+
+            <button type="button" mat-flat-button class="mat-flat-button" (click)="onSave_Click()"
+                [disabled]="formGroup.invalid">
+                SAVE
+            </button>
+
+            <button type="button" mat-flat-button class="mat-flat-button" (click)="onBack_Click()">
+                BACK TO GRID
+            </button>
+
+        </div>
+    </form>
+
+
+    <table mat-table [dataSource]="dataSource" *ngIf="showGrid">
+
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element">
+                <span class="table-link" (click)="onDelete_Click(element)"> DELETE </span>
+                <span class="table-link" (click)="onEdit_Click(element)"> EDIT </span>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="coursename">
+            <th mat-header-cell *matHeaderCellDef> Course Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.coursename}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numholes">
+            <th mat-header-cell *matHeaderCellDef> # of Holes </th>
+            <td mat-cell *matCellDef="let element"> {{element.numholes}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <button type="button" mat-flat-button class="mat-flat-button" *ngIf="showGrid" (click)="onAdd_Click()">
+        Add Course
+    </button>
+
 </div>
