updated header, styling

--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -7,6 +7,9 @@
         <button type="button" mat-flat-button (click)="onResetPassword_Click()" [disabled]="formGroup.invalid"> RESET
             PASSWORD
         </button>
+        <button type="button" mat-flat-button (click)="onBack_Click()">
+            GO BACK
+        </button>
     </form>
 
     <span class="nobetween-info"> If an account with this email address exists, you will receive an email to reset
