--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,14 @@
-.form-container {
+.login-container {
+    width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.form-container {
     width: 100%;
     display: flex;
     align-items: center;
