--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -40,5 +40,9 @@
 		<button type="button" mat-flat-button (click)="onCreateAccount_Click()" [disabled]="formGroup.invalid"> CREATE
 			ACCOUNT
 		</button>
+
+		<button type="button" mat-flat-button (click)="onBack_Click()">
+			GO BACK
+		</button>
 	</form>
 </div>
